# ITMO_AI_assistant

./: Dockerfile.txt  LICENSE  README.md  compose.yaml  dockerignore.txt  gitattributes.txt  gitignore.txt  gitlab-ci.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci-cd.yml  lint.yml  test.yml
app/: __init__.py
data/: ai_data.json  ai_product_data.json  all_programs_data.json  knowledge_base.json
src/app/: __init__.py  itmo_chat_bot.py  telegram_bot.py
src/parsers/: __init__.py  itmo_program_parser.py  parse_sites.py
tests/: __init__.py  test_basic.py
